feat: Implement list_tasks function

--- a/app.py/# Danh sách để lưu các công việc.ini
+++ b/app.py/# Danh sách để lưu các công việc.ini
@@ -1,11 +1,28 @@
 # Danh sách để lưu các công việc
-tasks = []
+tasks = [] # [cite: 55]
+
 def add_task(task_name):
-"""Thêm một công việc mới vào danh sách."""
-tasks.append(task_name)
-print(f"Đã thêm công việc: '{task_name}'")
+    """Thêm một công việc mới vào danh sách."""
+    tasks.append(task_name)
+    print(f"Đã thêm công việc: '{task_name}'") # [cite: 60]
+
+# --- HÀM MỚI ---
+def list_tasks(): # [cite: 119]
+    """Liệt kê tất cả các công việc."""
+    print("\n--- Danh sách công việc ---")
+    if not tasks:
+        print("Không có công việc nào.")
+        return
+    
+    # Duyệt và in ra danh sách có đánh số thứ tự [cite: 120]
+    for index, task in enumerate(tasks, start=1):
+        print(f"{index}. {task}")
+
 # --- Điểm bắt đầu của chương trình ---
 if __name__ == "__main__":
-print("Chào mừng đến với ứng dụng To-Do List!")
-add_task("Học bài Git và GitHub")
-add_task("Làm bài tập thực hành ở nhà")
+    print("Chào mừng đến với ứng dụng To-Do List!")
+    add_task("Học bài Git và GitHub") # [cite: 66]
+    add_task("Làm bài tập thực hành ở nhà") # [cite: 67]
+    
+    # Gọi hàm list_tasks mới [cite: 121]
+    list_tasks()
