feat: Implement delete_task function

--- a/app.py/# Danh sách để lưu các công việc.ini
+++ b/app.py/# Danh sách để lưu các công việc.ini
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 # Danh sách để lưu các công việc
 tasks = [] # [cite: 55]
 
@@ -80,4 +80,37 @@ if __name__ == "__main__":
     delete_task(index_2)
     print('Danh sách công việc sau khi xóa')
     list_task(tasks)
->>>>>>> 8170b4fb9a1f60f14fc0ae06c46eb0cbd5320a03
+
+# --- HÀM MỚI ---
+def delete_task(task_index): # [cite: 139]
+    """Xóa một công việc khỏi danh sách."""
+    try:
+        # Trừ 1 vì index người dùng bắt đầu từ 1
+        task = tasks.pop(task_index - 1) # [cite: 139]
+        print(f"Đã xóa công việc: '{task['name']}'")
+    except IndexError:
+        # Xử lý chỉ số không hợp lệ [cite: 140]
+        print(f"Lỗi: Không tìm thấy công việc với chỉ số {task_index}.") 
+    except TypeError:
+        print("Lỗi: Chỉ số phải là một số.")
+
+# --- Điểm bắt đầu của chương trình ---
+if __name__ == "__main__":
+    print("Chào mừng đến với ứng dụng To-Do List!")
+    add_task("Học bài Git và GitHub")
+    add_task("Làm bài tập thực hành ở nhà")
+    add_task("Đi chợ") # Thêm 1 task để xóa
+    
+    print("\n--- Trạng thái ban đầu ---")
+    list_tasks()
+    
+    print("\n--- Đánh dấu hoàn thành CV 1 ---")
+    complete_task(1)
+    list_tasks()
+
+    # Gọi hàm delete_task mới
+    print("\n--- Xóa CV 3 ---")
+    delete_task(3) # Xóa task "Đi chợ"
+    
+    print("\n--- Trạng thái cuối cùng ---")
+    list_tasks()
